# android_looper-rs

./: .gitignore  .travis.yml  Cargo.toml  LICENSE-MIT  README.md  index.html  search-index.js
android_looper/: enum.LooperPrepareOpts.html  index.html  sidebar-items.js  struct.AcquiredLooper.html  struct.LooperRef.html  type.LooperHandle.html
android_looper/error/: enum.Error.html  index.html  type.Result.html
android_looper_sys/: enum.ALooper.html  enum.LooperPoll.html  enum.LooperPrepareOpts.html  fn.ALooper_acquire.html  fn.ALooper_addFd.html  fn.ALooper_forThread.html  fn.ALooper_pollAll.html  fn.ALooper_pollOnce.html  fn.ALooper_prepare.html  fn.ALooper_release.html  fn.ALooper_removeFd.html  fn.ALooper_wake.html  index.html  type.ALooper_callbackFunc.html
android_looper_sys/event/: index.html
bitflags/__core/ascii/: struct.EscapeDefault.html
bitflags/__core/boxed/: struct.Box.html
bitflags/__core/cell/: struct.RefMut.html
bitflags/__core/char/: struct.DecodeUtf16.html  struct.EncodeUtf16.html  struct.EncodeUtf8.html  struct.EscapeDefault.html  struct.EscapeUnicode.html  struct.ToLowercase.html  struct.ToUppercase.html
bitflags/__core/clone/: trait.Clone.html
bitflags/__core/cmp/: trait.Eq.html  trait.Ord.html  trait.PartialEq.html  trait.PartialOrd.html
bitflags/__core/collections/: struct.BTreeMap.html  struct.BTreeSet.html  struct.HashMap.html  struct.HashSet.html
bitflags/__core/default/: trait.Default.html
bitflags/__core/env/: struct.Args.html  struct.ArgsOs.html  (+3 more)
src/: error.rs  lib.rs
src/android_looper_sys/: lib.rs.html
(+166 files in other folders)
